<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

        <data>
            <variable
                name="loginViewModel"
                type="in.wingstud.gogoride.viewmodel.LoginViewModel"/>
            <variable
                name="loginPresenter"
                type="in.wingstud.gogoride.presenter.LoginPresenter" />
        </data>

    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context=".activity.LoginActi">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_140"
                android:src="@drawable/logo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_20"
                android:orientation="vertical">

                <in.wingstud.gogoride.custome.TextViewRegular
                    style="@style/login_signup_text_view_style"
                    android:text="@string/mobile_no_email_id"/>

                <in.wingstud.gogoride.custome.EditTextViewRegular
                    android:text="@={loginViewModel.mobileno}"
                    android:id="@+id/etMobileNo"
                    style="@style/login_edit_text_style" />

                <in.wingstud.gogoride.custome.TextViewRegular
                    style="@style/login_signup_text_view_style"
                    android:text="@string/password"
                    android:layout_marginTop="@dimen/dp_20"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <in.wingstud.gogoride.custome.EditTextViewRegular
                        android:text="@={loginViewModel.password}"
                        android:id="@+id/etPassword"
                        style="@style/login_edit_text_style"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <in.wingstud.gogoride.custome.TextViewRegular
                    android:id="@+id/txtForgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_gravity="right"
                    android:padding="@dimen/dp_10"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/sp_16"/>
            </LinearLayout>

            <in.wingstud.gogoride.custome.ButtonViewRegular
                android:onClick="@{(v)->loginPresenter.loginReq()}"
                style="@style/login_button_style"
                android:text="@string/sign_in"/>

            <LinearLayout
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imvFb"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginRight="@dimen/dp_10"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/ic_facebook"/>

                <ImageView
                    android:id="@+id/imvGoogle"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/ic_google"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_40"
                android:orientation="horizontal">

                <in.wingstud.gogoride.custome.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_16"
                    android:text="@string/dont_have_an_accoount"
                    android:textColor="@color/colorAccent"/>

                <in.wingstud.gogoride.custome.TextViewRegular
                    android:id="@+id/txtSignUP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_5"
                    android:textSize="@dimen/sp_20"
                    android:onClick="goToSignUpScreen"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorAccent"/>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</layout>
