<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data></data>
    <androidx.appcompat.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:background="@color/colorPrimary"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        android:gravity="center|start"
        android:orientation="vertical"
        app:theme="@style/AppTheme">

        <in.wingstud.gogoride.custome.TextViewRegular
            android:background="@drawable/rounded_color_primary_btn_bg"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:padding="5dp"
            android:id="@+id/local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/local"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/txt_small" />
        <in.wingstud.gogoride.custome.TextViewRegular
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:padding="5dp"
            android:id="@+id/rental"
            android:text="@string/rental_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/txt_small" />
        <in.wingstud.gogoride.custome.TextViewRegular
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:padding="5dp"
            android:id="@+id/logistic"
            android:text="@string/logistic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/txt_small" />

        <ImageView
            android:id="@+id/imvNotification"
            android:layout_width="@dimen/toolbar_icon_width"
            android:layout_height="@dimen/toolbar_icon_height"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/dp_20"
            android:visibility="gone"
            android:src="@drawable/ic_notifation"
        />


    </androidx.appcompat.widget.Toolbar>
</layout>
