<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.Choose_Location">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_choose_l"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

        <RelativeLayout
            android:visibility="gone"
            android:paddingTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_alignParentLeft="true"
                android:textSize="15sp"
                android:text="@string/your_current_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_margin="2dp"
                android:layout_marginRight="15dp"
                android:id="@+id/currentlocation_refressh"
                android:layout_alignParentRight="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_refresh" />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/nearby_lin"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/current_location_rel"
                android:background="@drawable/linewithconner"
                android:elevation="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_margin="10dp"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:id="@+id/ic_location"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_location_pin" />
                <TextView
                    android:scrollHorizontally="true"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:gravity="center|start"
                    android:singleLine="true"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/ic_location"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/black"
                    android:id="@+id/current_location_tv"
                    android:layout_centerVertical="true"
                    android:hint="@string/your_current_location"/>
            </RelativeLayout>
            <TextView
                android:visibility="gone"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/drop_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_marginTop="@dimen/_3sdp"
                android:id="@+id/searchbar_rel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/linewithconner"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/ic_magnify"
                    android:layout_width="@dimen/_13sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/places_ic_search" />

                <AutoCompleteTextView
                    android:id="@+id/input_search_ch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_toRightOf="@+id/ic_magnify"
                    android:layout_toLeftOf="@+id/ic_clear"
                    android:background="@null"
                    android:hint="@string/enter_drop_location"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
                <ImageView
                    android:layout_alignParentEnd="true"
                    android:id="@+id/ic_clear"
                    android:layout_width="@dimen/_13sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/places_ic_clear" />

            </RelativeLayout>

        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerView"/>
        <ImageView
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/powered_by_google_light"/>
    </LinearLayout>


</layout>